 Bug 545391 -  keep nsAccessNode objects in cache instead of nsIAccessNode, r=davidb, marcoz, sr=neil