accessible/src/html/nsHTMLImageAccessible.cpp
@@ -385,28 +385,24 @@ nsHTMLImageAccessible::GetAreaAccessible(nsIDOMHTMLCollection *aAreaCollection,
   aAreaCollection->Item(aAreaNum,getter_AddRefs(domNode));
   if (!domNode)
     return nsnull;
-  
-  nsCOMPtr<nsIAccessNode> accessNode;
-  GetCacheEntry(*mAccessNodeCache, (void*)(aAreaNum),
-                getter_AddRefs(accessNode));
-  
+
+  void* key = reinterpret_cast<void*>(aAreaNum);
+  nsRefPtr<nsAccessNode> accessNode = mAccessNodeCache->GetWeak(key);
+
   if (!accessNode) {
     accessNode = new nsHTMLAreaAccessible(domNode, this, mWeakShell);
     if (!accessNode)
       return nsnull;
-    
-    nsRefPtr<nsAccessNode> accNode = nsAccUtils::QueryAccessNode(accessNode);
-    nsresult rv = accNode->Init();
+
+    nsresult rv = accessNode->Init();
     if (NS_FAILED(rv))
       return nsnull;
-    
-    PutCacheEntry(*mAccessNodeCache, (void*)(aAreaNum), accessNode);
+
+    mAccessNodeCache->Put(key, accessNode);
   }
 
-  nsIAccessible *accessible = nsnull;
-  CallQueryInterface(accessNode, &accessible);
-
-  return accessible;
+  nsCOMPtr<nsIAccessible> accessible = do_QueryInterface(accessNode);
+  return accessible.forget();
 }
 
 ////////////////////////////////////////////////////////////////////////////////
